SUSTech/CS323/project/test/test_1/test_Ejd9vn3m.spl
int test()
{
  int a, b = 1;
  int i = 0;
  while (i < a
  {
    b = b + i;
  }
}